DONE 35. typing possible only after fetch is done, no lorem ipsum at the beginning DONE
XX 36. CSS reset? XX
DONE 37. CSS comments DONE
DONE 38. reducer component DONE
XX 38. reg ex lint fix XX  (generated by npm module)
DONE 39. proper App tree in notes.txt DONE
DONE 40. final test
DONE 41. chrome & firefox inconsistencies fixed DONE
DONE 42. merge branches


*/


REDUX_FULLSTACK:

toChange:
DONE 1. split reducers in seperate files? DONE
2. toggleHints - change from function to action creator?
3. bar-chart onhover does not work perfectly
4. stats/ top-score naming consistency?
DONE 5. stats: no KPM or % if there is no record? DONE
6. stats: tooltips (speed, accuracy)?
7. stats: | between speed & accuracy always in the same place?
8. implement-redux thunk for fetching?
DONE 9. moreHints DONE
DONE 10. fa in hints? DONE
DONE 11. currentStats: change to by default showing stats for current timer value? DONE
XX 12. app-title: move left/up? XX
13. confirmation for stats reset
DONE 14. implement trasition effect to all button? DONE
15. authentication UI upper padding?
DONE 16. title not visible is app is minimized.DONE
DONE 17. authentication UI more consistent with the app DONE
DONE 18. login & register should start at the same height DONE
XXX 19. info that you need to login when hover/click on chartBar XXX
 XXX DONE 20. reset if login/register/logout is clicked DONE XXX pause instead, reset on logout only
DONE 21. lower the main app display? DONE
DONE 22. pause on clicking stats/login/register DONE
23. no class in Hints' chartBar but it behave the same?
24. clicking results is still making results visible for a moment
25. change toggleTimer to toggleActive in App.js, InputArea, Controls, LowerUI



(react scripts 3.3.0 => 3.4.0? new npm ver?)

isseus:
DONE 1. reloadin/typing address cause error DONE fixed: hashRouter instead of BrowserRouter,
(everything after # is ignored by the server) may cause problem later???